@@ -326,8 +326,10 @@ postcommand         Allows a user to execute arbitrary commands after
                     within the postcommand assignment:
                     <%input%>     - The input file for the original command.
                     <%output%>    - The output created by the original command.
-                    <%input_noext%>  - The input file with no extension.
-                    <%output_noext%> - The output file with no extension.
+                    <%input_basename%>  - The basename of the input file.
+                    <%input_noext%>     - The input file with no extension.
+                    <%output_basename%> - The basename of the output file.
+                    <%output_noext%>    - The output file with no extension.
                       The output file can be referenced as a generic output
                       file using <%output%> or can be referenced as a
                       component file (if it matches the particular type)
@@ -367,6 +369,7 @@ postcommand         Allows a user to execute arbitrary commands after
                     <%temporary%> - A temporary file name.
                     <%cat%>       - Platform non-specific command to cat a file.
                     <%cp%>        - Platform non-specific copy command.
+                    <%mkdir%>     - Platform non-specific mkdir command.
                     <%mv%>        - Platform non-specific move command.
                     <%rm%>        - Platform non-specific delete command.
                     <%nul%>       - Platform non-specific null device.
