@@ -1,3 +1,10 @@
+Fri Feb 18 09:43:08 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * README:
+        * modules/ProjectCreator.pm:
+
+          Added pseudo variables: mkdir, input_basename and output_basename.
+
 Thu Feb 17 11:36:22 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/TemplateInputReader.pm:
